# GeomorphConn

./: .gitignore  Borselli_Recipe.txt  Cavalli_IC_outlet_TauDEM.py  GeomorphConn GUI.htm  INSTALLATION.md  LICENSE  README.md  TROUBLESHOOTING.md  empirical_sweep.py  empirical_sweep_simple.py  empirical_sweep_windowed.py  pyproject.toml  sweep_results_windowed.json  test_slope_param.py
.github/workflows/: publish.yml  tests.yml
.streamlit/: config.toml
arcgis_tools/: ConnectivityTools.atbx  GeomorphConn_ArcGIS_v10.8.0.tbx  README.md
docs/: README.md  cli.md  gui.md  options.md  outlet.md  target.md
geomorphconn/: __init__.py  api.py  cli.py
geomorphconn/analysis/: __init__.py  cru_dynamics.py  disconnectivity.py
geomorphconn/analysis/utils/: __init__.py  visualization.py
geomorphconn/backends/: __init__.py  taudem.py
geomorphconn/components/: __init__.py  connectivity_index.py
geomorphconn/gee/: __init__.py  fetcher.py
geomorphconn/gui/: __init__.py  streamlit_app.py
geomorphconn/utils/: __init__.py  preprocess.py  target.py
geomorphconn/weights/: __init__.py  builder.py  components.py  tables.py
notebooks/: 01_IC_outlet_GEE_demo.ipynb  02_IC_target_demo.ipynb  03_IC_software_comparison.ipynb  04_GEE_all_sources_moscardo.ipynb  05_IC_timeseries_GEE_demo.ipynb  Target_example.dbf  Target_example.sbn  Target_example.sbx  Target_example.shp  Target_example.shx
paper/: paper.bib  paper.md
scripts/: smoke_cli_reproject.py
tests/: test_api_utils.py  test_cli.py  test_connectivity_index.py  test_cru_dynamics.py  test_disconnectivity.py  test_geomorphconn_alias.py  test_gui_streamlit_app.py  test_slope_param.py  test_target_utils.py  test_taudem_backend.py
