[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geomorphconn"
version = "0.1.0"
description = "GeomorphConn: Hydrologically-weighted index of connectivity (IC) with Landlab and Google Earth Engine support"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Manudeo Singh",  email = "mas291@aber.ac.uk"        },
    { name = "Marco Cavalli",  email = "marco.cavalli@irpi.cnr.it" },
]
keywords = [
    "sediment connectivity",
    "index of connectivity",
    "hydrology",
    "geomorphology",
    "Landlab",
    "Google Earth Engine",
    "remote sensing",
    "NDVI",
    "rainfall",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.10"
dependencies = [
    "landlab>=2.6",
    "numpy>=1.24",
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "matplotlib>=3.7",
    "scipy>=1.10",
]

[project.optional-dependencies]
gee = [
    "earthengine-api>=0.1.380",
    "xee>=0.0.10",
    "xarray>=2023.1",
    "geopandas>=0.13",
    "pyproj>=3.5",
]
target = [
    "geopandas>=0.13",
    "shapely>=2.0",
    "pyogrio>=0.7",
]
fast = [
    "numba>=0.57",
]
gui = [
    "streamlit>=1.30",
    "charset-normalizer>=3.0",
    "geopandas>=0.13",
    "shapely>=2.0",
    "pyogrio>=0.7",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "nbval",
    "black",
    "ruff",
    "pre-commit",
]
all = [
    "geomorphconn[gee,target,fast,gui]",
]

[project.scripts]
geomorphconn = "geomorphconn.cli:main"

[project.urls]
Homepage      = "https://github.com/manudeo/geomorphconn"
Documentation = "https://geomorphconn.readthedocs.io"
Repository    = "https://github.com/manudeo/geomorphconn"
Issues        = "https://github.com/manudeo/geomorphconn/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["geomorphconn*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short -v"

[tool.ruff]
line-length = 88
select      = ["E", "F", "W", "I"]
